--- a/birthday.html
+++ b/birthday.html
@@ -26,7 +26,7 @@
       padding: 20px;
       max-width: 90%;
     }
-
+    
     h1 {
       font-size: 60px;
       color: #e91e63;
@@ -127,8 +127,10 @@
 </head>
 <body>
   <div class="wish-container">
-    <h1>🎉 Happy Birthday! 🎉</h1>
-    <p>Wishing you joy, laughter, and a day filled with love! 🥰</p>
+    
+    <h1>🎉 My Bestie Smita! 🎉</h1>
+    <p>Smita, thank you for being the sunshine in my life and for staying by my side forever. Your friendship is the treasure I’ll always cherish. Grateful beyond words for you!" 🌸✨
+</p>
   </div>
 
   <!-- 🎈 Balloons -->
