--- a/birthday.html
+++ b/birthday.html
@@ -26,7 +26,11 @@
       padding: 20px;
       max-width: 90%;
     }
-    
+    .wish-container img{
+      border: 12px solid white;
+      height: 250px;
+      width: 250px;
+    }
     h1 {
       font-size: 60px;
       color: #e91e63;
@@ -127,10 +131,9 @@
 </head>
 <body>
   <div class="wish-container">
-    
-    <h1>🎉 My Bestie Smita! 🎉</h1>
-    <p>Smita, thank you for being the sunshine in my life and for staying by my side forever. Your friendship is the treasure I’ll always cherish. Grateful beyond words for you!" 🌸✨
-</p>
+    <img src="samrat.jpg">
+    <h1>🎉 Happy Birthday Samrat Da! 🎉</h1>
+    <p>Happy Birthday Samrat da! 🎉✨ May your day be filled with love, laughter, and memories to treasure forever. Wishing you an incredible year ahead, where every dream comes true. 🌈💖 🥰</p>
   </div>
 
   <!-- 🎈 Balloons -->
