--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <script>
     function checkCode() {
-      const secret = "happy123";
+      const secret = "light029";
       const userInput = document.getElementById("codeInput").value.trim();
 
       if (userInput === secret) {
